--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ bcrypt==4.2.1
 Django==4.2.19
 django-cors-headers==4.7.0
 djangorestframework==3.15.2
+gunicorn==23.0.0
+packaging==24.2
 sqlparse==0.5.3
-gunicorn
 typing_extensions==4.12.2
-whitenoise
